# ClionOpenGLSetUp-Windows

OpenGlSetUpFromGLFW/: CMakeLists.txt  main.cpp  shader.h
OpenGlSetUpFromGLFW/includes/glad/: glad.h
OpenGlSetUpFromGLFW/src/: glad.c
